testing until push container registry

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,24 +3,24 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/iykra-437909/nike-descriptions-generator:latest', '.']
 
-  # Push the container image to Container Registryy
+  # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/iykra-437909/nike-descriptions-generator:latest']
     
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'deploy'
-      - 'fastapi-service'
-      - '--image'
-      - 'gcr.io/iykra-437909/nike-descriptions-generator'
-      - '--region'
-      - 'asia-southeast2'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
+  # - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  #   entrypoint: gcloud
+  #   args:
+  #     - 'run'
+  #     - 'deploy'
+  #     - 'nike-descriptions-generator-service'
+  #     - '--image'
+  #     - 'gcr.io/iykra-437909/nike-descriptions-generator'
+  #     - '--region'
+  #     - 'asia-southeast2'
+  #     - '--platform'
+  #     - 'managed'
+  #     - '--allow-unauthenticated'
 
 images:
   - 'gcr.io/iykra-437909/nike-description-generators:latest'
