--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ python-multipart==0.0.9
 torch==2.2.0
 jinja2==3.1.3
 aiofiles==23.2.1
-typing==3.7.4.3
-pickle5==0.0.12
-logging==0.5.1.2
+typing-extensions>=4.5.0
+google-cloud-storage>=2.14.0
